--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Dopetrope by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>uyamunkhbold.github.io</title>
+		<title>uyaguinness.github.io</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -23,9 +18,8 @@
 					<!-- Banner -->
 						<section id="banner">
 							<header>
-								<h2>Uya Munkhbold</h2>
-								<h2>Portfolio</h2>
-								<p>Data Analyst well-rounded in SQL, R, Tableau, PowerBI</p>
+								<h2>Uya Guinness</h2>
+								<p>Portfolio Projects: Well-rounded Data Analyst in SQL, R, Tableau, PowerBI</p>
 							</header>
 						</section>
 
