--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 					<!-- Banner -->
 						<section id="banner">
 							<header>
-								<h2>Uya Guinness</h2>
+								<h2>Uya M Guinness</h2>
 								<p>Portfolio Projects: Well-rounded Data Analyst in SQL, R, Tableau, PowerBI</p>
 							</header>
 						</section>
